fix z-index for control arrows

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@
     justify-content: center;
     width: 100%;
     left: 0;
+    z-index: 1001;
 }
 
 .fade-left,
